using javascript Modules script tag

--- a/Javascript-Modules/browse.html
+++ b/Javascript-Modules/browse.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Some Website</title>
   <link rel="stylesheet" href="css/site.min.css">
-  <script defer src="js/main.js"></script>
+  <script defer src="src/index.js" type="module"></script>
   <!-- <script defer src="js/api.js"></script>
   <script defer src="js/template.js"></script> -->
 </head>
