accessing dom elements by css selector and manipulating them in javascript

--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -161,7 +161,8 @@
         </footer>
     </div>
     <script>
-        document.getElementById('current-year').innerHTML = new Date().getFullYear();
+        // document.getElementById('current-year').innerHTML = new Date().getFullYear();
+        document.querySelector("#current-year").innerHTML = new Date().getFullYear();
     </script>
   </body>
 </html>
