accessing dom elements by css selector using childNodes

--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -162,7 +162,8 @@
     </div>
     <script>
         // document.getElementById('current-year').innerHTML = new Date().getFullYear();
-        document.querySelector("#current-year").innerHTML = new Date().getFullYear();
+        // document.querySelector("#current-year").innerHTML = new Date().getFullYear();
+        document.querySelector("footer div").childNodes[1].innerHTML = new Date().getFullYear();
     </script>
   </body>
 </html>
