removing and adding css classes from DOM

--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -164,6 +164,8 @@
         // document.getElementById('current-year').innerHTML = new Date().getFullYear();
         // document.querySelector("#current-year").innerHTML = new Date().getFullYear();
         document.querySelector("footer div").childNodes[1].innerHTML = new Date().getFullYear();
+        document.querySelector("footer div").classList.remove("font-xxlarge");
+        document.querySelector("footer div").classList.add("font-large");
     </script>
   </body>
 </html>
