--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -163,10 +163,21 @@
     <script>
         // document.getElementById('current-year').innerHTML = new Date().getFullYear();
         // document.querySelector("#current-year").innerHTML = new Date().getFullYear();
-        document.querySelector("footer div").childNodes[1].innerHTML = new Date().getFullYear();
-        document.querySelector("footer div").classList.remove("font-xxlarge");
-        document.querySelector("footer div").classList.add("font-large");
 
+        let placeholder = document.querySelector("footer div");
+        placeholder.childNodes[1].innerHTML = new Date().getFullYear();
+        placeholder.classList.remove("font-xxlarge");
+        placeholder.classList.add("font-large");
+
+        placeholder.lastChild.remove();
+
+        let a = document.createElement("a");
+        a.setAttribute("href", "./index.html");
+
+        let a_text = document.createTextNode("GloboTicket");
+        a.appendChild(a_text);
+
+        placeholder.appendChild(a);
         function removeFromCart(idx) {
             let items = document.querySelectorAll("#eventtable table tbody tr");
             if(idx<items.length) {
