--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -186,12 +186,18 @@
         }
 
         let btns = document.querySelectorAll('button');
-        btns.forEach(btn => {btn.onclick = () => addToCart();});
+        // btns.forEach(btn => {btn.onclick = () => addToCart();});
+
+        btns.forEach(btn => {
+            btn.addEventListener("click", addToCart);
+        })
 
         function addToCart() {
             let spanTickets = document.getElementById('spanTickets');
             let count = parseInt(spanTickets.textContent) ?? 0;
             spanTickets.textContent = count + 1;
+
+            btns[1].removeEventListener("click", addToCart);
         }
     </script>
   </body>
