--- a/Javascript-browser/index.html
+++ b/Javascript-browser/index.html
@@ -1,23 +1,27 @@
 <!DOCTYPE html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8" />
     <link rel="icon" href="img/favicon.ico" />
     <link rel="stylesheet" href="//fonts.googleapis.com/css?family=Open+Sans" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/styles.css">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Globoticket</title>
-  </head>
-  <body>
+</head>
+
+<body>
     <div id="root">
         <nav class="navbar navbar-expand navbar-dark fixed-top bg-dark">
             <div class="container-fluid">
                 <div class="collapse navbar-collapse">
                     <ul class="navbar-nav me-auto ms-3 mb-2 mb-lg-0">
                         <li class="nav-item">
-                            <a href="./index.html" class="navbar-brand"><img src="img/logo.png" alt="Globoticket logo" /></a>
+                            <a href="./index.html" class="navbar-brand"><img src="img/logo.png"
+                                    alt="Globoticket logo" /></a>
                         </li>
                     </ul>
                 </div>
@@ -52,7 +56,8 @@
                     <tbody>
                         <tr class="align-middle">
                             <td>
-                                <img class="img-fluid max-100" src="img/logos/Container-Enthusiasm-TalkDocker-To-Me.png" alt="Cover" />
+                                <img class="img-fluid max-100" src="img/logos/Container-Enthusiasm-TalkDocker-To-Me.png"
+                                    alt="Cover" />
                             </td>
                             <td class="max-50">
                                 10/1/2025, 7:00:00 PM
@@ -67,12 +72,14 @@
                                 $49.99
                             </td>
                             <td class="max-50">
-                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add to Cart</button>
+                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add
+                                    to Cart</button>
                             </td>
-                        </tr>               
+                        </tr>
                         <tr class="align-middle">
                             <td>
-                                <img class="img-fluid max-100" src="img/logos/DigitalCowboys_BinaryBovine.png" alt="Cover" />
+                                <img class="img-fluid max-100" src="img/logos/DigitalCowboys_BinaryBovine.png"
+                                    alt="Cover" />
                             </td>
                             <td class="max-50">
                                 11/1/2025, 7:30:00 PM
@@ -87,12 +94,14 @@
                                 $59.99
                             </td>
                             <td class="max-50">
-                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add to Cart</button>
+                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add
+                                    to Cart</button>
                             </td>
-                        </tr>               
+                        </tr>
                         <tr class="align-middle">
                             <td>
-                                <img class="img-fluid max-100" src="img/logos/GitOuttaMyHub-CodeEmpire.png" alt="Cover" />
+                                <img class="img-fluid max-100" src="img/logos/GitOuttaMyHub-CodeEmpire.png"
+                                    alt="Cover" />
                             </td>
                             <td class="max-50">
                                 12/1/2025, 8:00:00 PM
@@ -107,12 +116,14 @@
                                 $39.99
                             </td>
                             <td class="max-50">
-                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add to Cart</button>
+                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add
+                                    to Cart</button>
                             </td>
-                        </tr>               
+                        </tr>
                         <tr class="align-middle">
                             <td>
-                                <img class="img-fluid max-100" src="img/logos/Memory-Allocation-The-Cache.png" alt="Cover" />
+                                <img class="img-fluid max-100" src="img/logos/Memory-Allocation-The-Cache.png"
+                                    alt="Cover" />
                             </td>
                             <td class="max-50">
                                 1/15/2026, 8:30:00 PM
@@ -127,12 +138,15 @@
                                 $29.99
                             </td>
                             <td class="max-50">
-                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add to Cart</button>
+                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add
+                                    to Cart</button>
                             </td>
-                        </tr>               
+                        </tr>
                         <tr class="align-middle">
                             <td>
-                                <img class="img-fluid max-100" src="img/logos/Network-Firewall-Squad---For-Those-About-to-Block,-We-Salute-You.png" alt="Cover" />
+                                <img class="img-fluid max-100"
+                                    src="img/logos/Network-Firewall-Squad---For-Those-About-to-Block,-We-Salute-You.png"
+                                    alt="Cover" />
                             </td>
                             <td class="max-50">
                                 3/8/2026, 8:45:00 PM
@@ -147,9 +161,10 @@
                                 $69.99
                             </td>
                             <td class="max-50">
-                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add to Cart</button>
+                                <button type="button" class="btn btn-primary btn-primary-themed btn-md font-upper">Add
+                                    to Cart</button>
                             </td>
-                        </tr>               
+                        </tr>
                     </tbody>
                 </table>
             </div>
@@ -180,7 +195,7 @@
         placeholder.appendChild(a);
         function removeFromCart(idx) {
             let items = document.querySelectorAll("#eventtable table tbody tr");
-            if(idx<items.length) {
+            if (idx < items.length) {
                 items[idx].remove();
             }
         }
@@ -189,16 +204,31 @@
         // btns.forEach(btn => {btn.onclick = () => addToCart();});
 
         btns.forEach(btn => {
-            btn.addEventListener("click", addToCart, {once: true});
+            btn.addEventListener("click", addToCart, { once: true });
         })
 
-        function addToCart() {
-            let spanTickets = document.getElementById('spanTickets');
-            let count = parseInt(spanTickets.textContent) ?? 0;
-            spanTickets.textContent = count + 1;
-
-            // btns[1].removeEventListener("click", addToCart);
+        function getCartItemCount() {
+            let spanTickets = document.getElementById("spanTickets");
+            return parseInt(spanTickets.textContent) ?? 0;
         }
+
+        function addToCart() {
+            let count = getCartItemCount();
+            spanTickets.textContent = count + 1;
+        }
+
+        document.querySelector("a[href='./cart.html']").addEventListener(
+            "click",
+            (e) => {
+                let count = getCartItemCount();
+                if (count === 0) {
+                    alert("Cart is empty!");
+                    e.preventDefault();
+                }
+            }
+        )
+
     </script>
-  </body>
+</body>
+
 </html>
